[gd_scene load_steps=2 format=3 uid="uid://cq5n0vm3ynk6x"]

[ext_resource type="Script" uid="uid://ckfyia0p43s2" path="res://scripts/shop/shop.gd" id="1_r3mde"]

[node name="Shop" type="GridContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -249.0
offset_top = -316.5
offset_right = 249.0
offset_bottom = 316.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r3mde")

[node name="Title" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Shop"
horizontal_alignment = 1

[node name="Content" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Scroll" type="ScrollContainer" parent="Content"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Content/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="WallpaperShop" type="VBoxContainer" parent="Content/Scroll/VBox"]
layout_mode = 2

[node name="WallpaperLabel" type="Label" parent="Content/Scroll/VBox/WallpaperShop"]
layout_mode = 2
text = "Wallpaper"
horizontal_alignment = 1

[node name="WallpaperGrid" type="GridContainer" parent="Content/Scroll/VBox/WallpaperShop"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 60
columns = 3

[node name="Separator1" type="HSeparator" parent="Content/Scroll/VBox"]
layout_mode = 2

[node name="UIColorShop" type="VBoxContainer" parent="Content/Scroll/VBox"]
layout_mode = 2

[node name="ColorThemeLabel" type="Label" parent="Content/Scroll/VBox/UIColorShop"]
layout_mode = 2
text = "UI Color Theme"
horizontal_alignment = 1

[node name="ColorThemeGrid" type="GridContainer" parent="Content/Scroll/VBox/UIColorShop"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 60
columns = 3

[node name="Separator2" type="HSeparator" parent="Content/Scroll/VBox"]
layout_mode = 2

[node name="UIThemeShop" type="VBoxContainer" parent="Content/Scroll/VBox"]
layout_mode = 2

[node name="UIThemeLabel" type="Label" parent="Content/Scroll/VBox/UIThemeShop"]
layout_mode = 2
text = "UI Theme"
horizontal_alignment = 1

[node name="UIThemeGrid" type="GridContainer" parent="Content/Scroll/VBox/UIThemeShop"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 60
columns = 3

[node name="Separator3" type="HSeparator" parent="Content/Scroll/VBox"]
layout_mode = 2

[node name="WallpaperThemeShop" type="VBoxContainer" parent="Content/Scroll/VBox"]
layout_mode = 2

[node name="WallpaperThemeLabel" type="Label" parent="Content/Scroll/VBox/WallpaperThemeShop"]
layout_mode = 2
text = "Wallpaper Theme"
horizontal_alignment = 1

[node name="WallpaperThemeGrid" type="GridContainer" parent="Content/Scroll/VBox/WallpaperThemeShop"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 60
columns = 3

[node name="Separator4" type="HSeparator" parent="Content/Scroll/VBox"]
layout_mode = 2

[node name="SetShop" type="VBoxContainer" parent="Content/Scroll/VBox"]
layout_mode = 2

[node name="SetLabel" type="Label" parent="Content/Scroll/VBox/SetShop"]
layout_mode = 2
text = "Settings Set"
horizontal_alignment = 1

[node name="SetGrid" type="GridContainer" parent="Content/Scroll/VBox/SetShop"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 60
columns = 3

[node name="Confirm" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="PointsCounter" type="Label" parent="Confirm"]
layout_mode = 2
text = "Points: 0"

[node name="Buy" type="Button" parent="Confirm"]
layout_mode = 2
text = "Buy"

[node name="Preview" type="Button" parent="Confirm"]
layout_mode = 2
text = "Preview"

[node name="Close" type="Button" parent="Confirm"]
layout_mode = 2
text = "Close"
